--- a/myApp/templates/base.html
+++ b/myApp/templates/base.html
@@ -33,7 +33,6 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
         <!--MDB-->
-        <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css" rel="stylesheet"/>-->
         <!--Custom CSS-->
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
@@ -45,7 +44,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand abs" href="{{ url_for('home') }}">Adam's Message Encoding System</a>
+            <a class="navbar-brand abs" href="{{ url_for('routes.home') }}">Adam's Message Encoding System</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
